---------------------------------------------------------------------------------------------------
Version: 2.4.9
Date: ?
  Changes:
    - update chinese translation. credit sdqwo
---------------------------------------------------------------------------------------------------
Version: 2.4.8
Date: 2023-3-28
  Changes:
    - added hcl from boric acid recipe
    - fixed crash when py fusion energy wasnt active
---------------------------------------------------------------------------------------------------
Version: 2.4.7
Date: 2023-1-31
  Changes:
    - Mining speed of nexelit mine reduced from 20/s -> 8/s
---------------------------------------------------------------------------------------------------
Version: 2.4.6
Date: 2023-1-5
  Changes:
    - Removed inital ammo recipe. You must now research gunpowder before crafting any ammo.
    - Removed several plate to molten solder recipes
    - Reduced the crushed quartz output from sand sorting
---------------------------------------------------------------------------------------------------
Version: 2.4.5
Date: 2022-12-19
  Changes:
    - rebalanced solder recipes.
    - fixed double unlock for filtration media if pypetroleum handling and pyrawores are active.
---------------------------------------------------------------------------------------------------
Version: 2.4.4
Date: 2022-11-28
  Changes:
    - fixed double unlock for advanced foundry mk01.
---------------------------------------------------------------------------------------------------
Version: 2.4.3
Date: 2022-11-28
  Changes:
    - tweaks for gunpowder.
    - changed basic steel recipe.
    - gear casting buff.
    - increased energy usuage of electric arc furnace.
---------------------------------------------------------------------------------------------------
Version: 2.4.2
Date: 2022-11-03
  Changes:
    - added russian translation.