@@ -8,8 +8,10 @@ fuelrodmk02-combustion=Fuel rod MK 02 to combustion mixture (__1__°C)
 fuelrodmk03-combustion=Fuel rod MK 03 to combustion mixture (__1__°C)
 fuelrodmk04-combustion=Fuel rod MK 04 to combustion mixture (__1__°C)
 fuelrodmk05-combustion=Fuel rod MK 05 to combustion mixture (__1__°C)
+fractional-distillation=Fractional distillation
 
 [recipe-description]
+fractional-distillation=Decompose environmental compounds according to small differences in their boiling points. Only a fraction of pure nitrogen can be recovered.
 
 [item-group-name]
 py-rawores=Py Raw Ores
@@ -247,7 +249,7 @@ chromite-concentrate=Chromite concentrate
 prepared-chromium=Prepared chromium
 chromium-rejects=Chromium rejects
 gold-solution=Gold solution
-purest-nitrogen-gas=Purest nitrogen
+purest-nitrogen-gas=Contaminated nitrogen
 molten-chromium=Molten chromium
 molten-aluminium=Molten aluminium
 ore-copper=Copper ore
